Services4K8s/Kubecost/wellCome/resources/nginx.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: default #${APP_NAMESPACE}
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          resources:
            limits:
              cpu: "250m"
              memory: "64Mi"
            requests:
              cpu: "125m"
              memory: "32Mi"
          ports:
            # - name: web
            #   containerPort: 80
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default #${APP_NAMESPACE}
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default #${APP_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web9090
    # traefik.ingress.kubernetes.io/router.tls.domains.0.main:college.net
    # traefik.ingress.kubernetes.io/router.tls.domains.0.sans: demo.college.net

spec:
  # entryPoints:
  #   - web
  rules:
    - host: nginx.0a0f122c.nip.io
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx
                port: 
                  name: web
                  # number: 9090
